# Graphics-exam-2018

./: .gitattributes  .gitignore  CMakeLists.txt  readME
resources/shaders/: BaW.frag  map.frag  map.vert  standard.frag  standard.vert  text.frag  text.vert
src/: main.cpp
src/headers/: Audio.hpp  Camera.h  Enums.h  Functions.h  GameObject.h  Globals.h  Init.h  Mesh.hpp  Movable.h  ObjectHandler.h  Shaders.h  Structs.h  TextBox.h  Texture.h  logger.h  mad.h  objectLoader.hpp  stb_image.h
src/src/: Camera.cpp  Functions.cpp  GameObject.cpp  Globals.cpp  Init.cpp  Movable.cpp  ObjectHandler.cpp  Shaders.cpp  TextBox.cpp  Texture.cpp  objectLoader.cpp
